<resources>
    <string name="app_name">New Chat App</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="save_user">save user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="verification_text">Registration was successfully, please verify your account, in your email address</string>
    <string name="send">send</string>
</resources>