<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/register_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:layout_marginTop="15dp"
            android:hint="@string/enter_your_name"/>
        <EditText
            android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:layout_marginTop="15dp"
            android:hint="@string/enter_your_last_name"/>
        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_your_email"

            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_your_password"

            android:layout_marginTop="15dp"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"

            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/save_user"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/verification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/verification_text"
        android:visibility="gone"/>

</LinearLayout>